Fix dark mode

--- a/components/homePage/portfolio/proyecto-card.module.css
+++ b/components/homePage/portfolio/proyecto-card.module.css
@@ -1,5 +1,5 @@
 .card {
-  background: #fff;
+  background: rgb(var(--card-rgb));
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
