--- a/components/layout/footer.module.css
+++ b/components/layout/footer.module.css
@@ -14,7 +14,7 @@
 }
 
 .social {
-  filter: invert(--invert-percentage);
+  filter: invert(var(--invert-percentage));
   justify-self: center;
 }
 
