--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,6 +83,7 @@
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 41, 50, 60;
+    --background-middle-rgb: 227, 238, 255;
     --background-end-rgb: 72, 85, 99;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
